# TOOL_cloth_dynamics

./: .LICENSE  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  diff_cloth_applications.md  hello_editor_script.gd  justfile  mesh_collisions.md  obj_sequence_gltf.gd  todo.md
.clinerules/: timeless-design.instructions.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lean-slang.yml  release.yml
animate/: animate_0_1.gd  justfile  requirements.txt
animate/iter23/: animated_blend_shapes.gltf  param.txt
decisions/: algorithms.md  api-design.md  data-structures.md  demo-scenes.md  diffcloth-integration.md  file-formats.md  future-extensions.md  loss-functions.md  pipeline-stages.md  references.md  skeleton-capsule-pipeline.md  spring-bone-optimization.md  spring-bone-testing.md  system-architecture.md
decisions/specs/: algorithms.md  api-design.md  data-structures.md  pipeline-stages.md  references.md  skeleton-capsule-pipeline.md
lean/: Cloth.lean  EmitShaders.lean  lake-manifest.json  lakefile.lean
lean/Cloth/: Avbd.lean  SlangCodegen.lean
lean/Cloth/Avbd/: AdjacencyKwise.lean  AdjacencySpring.lean  Coloring.lean
lean/Cloth/SlangCodegen/: AssembleB.lean  AttachmentDualUpdate.lean  AttachmentForce.lean  AttachmentForceAl.lean  AttachmentForceAlBackward.lean  AttachmentProject.lean  CGAlpha.lean  CGBeta.lean  DotReduce.lean  DotReduceSerial.lean  Saxpby.lean  SaxpbyIndirect.lean  SaxpbyIndirectDf32.lean  SelfCollisionScan.lean  Spmv.lean  SpmvDf32.lean  SpringForce.lean  SpringForceBackward.lean  SpringProject.lean  TriangleBending.lean  TriangleBendingDualUpdate.lean  TriangleBendingForce.lean  TriangleBendingForceAl.lean  TriangleBendingForceAlBackward.lean  TriangleMembraneDualUpdate.lean  TriangleMembraneForce.lean  TriangleMembraneForceAl.lean  TriangleMembraneForceAlBackward.lean  TriangleProject.lean  VbdGatherAttachment.lean  VbdGatherAttachmentBackward.lean  VbdGatherBending.lean  VbdGatherBendingBackward.lean  VbdGatherSpring.lean  VbdGatherSpringBackward.lean  VbdGatherTriangle.lean  VbdGatherTriangleBackward.lean  VbdInit.lean  VbdInitBackward.lean  VbdSolveApply.lean  (+1 more)
misc/: install-slang.sh
src/assets/animations/vrma/: LICENSE
src/assets/meshes/avatars/FoxGirl/: avatar.mtl
src/assets/meshes/avatars/Goblin/: LICENSE  avatar.mtl  skin.txt
src/assets/meshes/avatars/T-rex/: skeleton.mtl
src/assets/meshes/avatars/VRM1_Constraint_Twist_Sample/: LICENSE
src/assets/meshes/garments/LCL_Skirt_DressEvening_003/: cage.mtl  (+2 more)
src/assets/meshes/remeshed/: agent_hat.obj.mtl  agenthat2-579.obj.mtl  agenthat2.mtl  dress-handsup-drape.mtl  dress-v5k-f10k-v2.obj.mtl  dress-v5k-f10k-v3.mtl  sock1055-2081.obj.mtl  sock482.obj.mtl
src/assets/meshes/scene/: arrow2.obj.mtl  clip.mtl  clip.obj.mtl
src/code/: main.cpp
src/code/engine/: BlockCsrForm.h  CollisionStencilAdapter.cpp  CollisionStencilAdapter.h  Constants.cpp  Constants.h  Debug.h  Macros.h  MeshFileHandler.h  SchwarzPreconditionerWrapper.cpp  SchwarzPreconditionerWrapper.h  Timer.cpp  Timer.h  UtilityFunctions.h  Vec3f.h  stb_image.cpp  stb_image.h
src/code/optimization/: BackwardTaskSolver.cpp  BackwardTaskSolver.h  OptimizationTaskConfigurations.cpp  OptimizationTaskConfigurations.h  OptimizationTaskSetup.cpp  OptimizationTaskSetup.h  OptimizeHelper.cpp  OptimizeHelper.h
src/code/simulation/: AttachmentSpring.cpp  AttachmentSpring.h  CapsuleGenerator.cpp  CapsuleGenerator.h  CollisionFCL.cpp  CollisionFCL.h  CollisionUtils.cpp  CollisionUtils.h  Constraint.cpp  Constraint.h  DifferentiableSkeletonOptimizer.cpp  DifferentiableSkeletonOptimizer.h  FixedPoint.h  GarmentFitter.cpp  GarmentFitter.h  MeshLoader.cpp  MeshLoader.h  Particle.cpp  Particle.h  Primitive.cpp  Primitive.h  Simulation.cpp  Simulation.h  SkeletonDemoScenes.h  SkeletonLoader.cpp  SkeletonLoader.h  SkeletonPipelineTest.cpp  SkeletonPipelineTest.h  SparseOctree.cpp  SparseOctree.h  Spline.cpp  Spline.h  Spring.cpp  Spring.h  SpringBoneExtender.h  TaperedCapsule.cpp  TaperedCapsule.h  Triangle.cpp  Triangle.h  TriangleBending.cpp  (+1 more)
src/code/slang_solver/: AvbdBackwardShim.cpp  AvbdBackwardShim.h  AvbdSolver.h  AvbdSolver.mm  Makefile  MetalCGSolver.h  MetalCGSolver.mm  PERF_FINDINGS.md  test_avbd_backward_shim.cpp  test_avbd_inverse_design.cpp  test_avbd_inverse_design_mass.cpp  test_avbd_solver.cpp  test_metal_cg_solver.cpp
src/code/supports/: Logging.cpp  Logging.h
tests/slang_validate/: Makefile  assemble_b_test.cpp  attachment_dual_update_test.cpp  attachment_force_al_test.cpp  attachment_force_test.cpp  attachment_project_test.cpp  cg_alpha_test.cpp  cg_beta_test.cpp  cg_demo_test.cpp  dot_reduce_serial_test.cpp  metal_perf_test.mm  pd_gravity_demo_test.cpp  pd_multistep_demo_test.cpp  pd_step_demo_test.cpp  perf_baseline_test.cpp  saxpby_indirect_df32_test.cpp  saxpby_indirect_test.cpp  saxpby_test.cpp  spmv_df32_test.cpp  spmv_test.cpp  spring_force_backward_test.cpp  spring_force_test.cpp  spring_project_test.cpp  triangle_bending_dual_update_test.cpp  triangle_bending_force_al_backward_test.cpp  triangle_bending_force_al_test.cpp  triangle_bending_force_test.cpp  triangle_bending_test.cpp  triangle_membrane_dual_update_test.cpp  triangle_membrane_force_al_backward_test.cpp  triangle_membrane_force_al_test.cpp  triangle_membrane_force_test.cpp  triangle_project_test.cpp  vbd_gather_attachment_test.cpp  vbd_gather_bending_test.cpp  vbd_gather_spring_test.cpp  vbd_gather_triangle_test.cpp  vbd_init_test.cpp  vbd_solve_apply_test.cpp
(+8 files in other folders)
